--- a/todo
+++ b/todo
@@ -1,18 +1,19 @@
 tesera todo:
-
-menu
-high score screen
-music
+menu - sensible look. highlighted selection. enter: select
+high score screen - need to store stuff
+music (should start on new game)
 levels - speed-up
 background pic
 not updating w/o focus!
 help/controls screen
-smooth scrolling - makes twisting really hard? or just calculate based on current pos (well, next)
+remove moveBlock calls
 
 done
 actually remove lines.
 hide yellow rows
 realtime score screen
 game over screen
-
+BUG - moving under blocks removes them
+added and fixed smooth animation - then left it out
+removed gray lines in the grid
 
